--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
+<!DOCTYPE HTML>
+<head><title>index</title>
+</head>
+<body>
 <IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg">
+</body>
+</html>
