--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head><title>index</title>
 </head>
 <body>
-<IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg">
+<div>
+<IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200>
+</div>
 </body>
 </html>
