--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 https://github.com/lokumnin/lokumn/index.html
 <div>
-<IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200>
+<!--IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200-->
 </div>
 </body>
 </html>
