--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 </head>
 <body>
 <div>
-<a href="https://github.com/lokumnin/lokumn/index.html">index</a>
+<a href="https://github.com/lokumnin/lokumn/index.html">lokumn</a>
 </div>
 <div>
 <!--IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200-->
 </div>
-2020-08-11 10:09@kolumnin
+2020-08-11 13:54@kolumnin
 </body>
 </html>
