--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
-<head><title>index</title>
+<head><title>lokumn_index</title>
 </head>
 <body>
 <div>
 <a href="https://lokumnin.github.io/lokumn/">lokumn</a>
 </div>
 <div>https://lokumnin.github.io/lokumn/
-<IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200>
+<!--IMG SRC="https://github.com/lokumnin/lokumn/blob/master/IMG_20200203_105635.jpg" width=200 height=200-->
 </div>
-2020-08-11 13:58@kolumnin
+🙂⭐👁️
+2022-10-27 06:30@lokumnin
 </body>
 </html>
